<resources>
    <string name="app_name">LocalDelivery</string>
    <string name="register_customer_heading">Sign Up</string>
    <string name="enter_email_id">Enter Email_ID</string>
    <string name="user_name">User Name</string>
    <string name="first_name_prompt">First Name</string>
    <string name="last_name_prompt">Last Name</string>
    <string name="phone_number_prompt">Phone Number</string>
    <string name="birth_year_prompt">Birth Year</string>
    <string name="gender_prompt">Gender</string>
    <string name="register_customer_button">Sign Up</string>
    <string name="register_customer">Deliver</string>
    <string name="sender">Sender</string>
    <string name="reciever">Reciever</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>


    <style name="Spinner" parent="Widget.AppCompat.Light.DropDownItem.Spinner">
        <item name="android:textColor">@color/primecolour</item>
        <item name="android:gravity">center</item>

    </style>

    <string-array name="Gender">
        <item name="male">Male</item>
        <item name="female">Female</item>
        <item name="other">Other</item>
    </string-array>
</resources>


