<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

    <TableRow>
        <Button
            android:id="@+id/deliver"
            android:text="@string/register_customer"
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="6dp"
            android:textColor="@color/black"
            android:paddingTop="15dp"
            android:background="@color/primecolour"
            />
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/sender"
            android:text="@string/sender"
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="8dp"
            android:textColor="@color/black"
            android:background="@color/yellow"
            android:paddingTop="15dp"

            />

    </TableRow>

        <TableRow>
            <Button
                android:id="@+id/reciever"
                android:text="@string/reciever"
                android:layout_width="150dp"
                android:layout_height="130dp"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/black"
                android:background="@color/red"
                android:paddingTop="15dp"

                />

        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/registration"
                android:text="@string/registration"
                android:layout_width="150dp"
                android:layout_height="130dp"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/black"
                android:background="@color/primecolour"
                android:paddingTop="15dp"

                />

            <Button
                android:id="@+id/login"
                android:text="@string/login"
                android:layout_width="150dp"
                android:layout_height="130dp"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/black"
                android:background="@color/primecolour"
                android:paddingTop="15dp"

                />

        </TableRow>
    </TableLayout>

</LinearLayout>